Added RandomRuleMajorChords